--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -84,6 +84,8 @@
     "selectPhotos": "Select Photos",
     "selectedPhotos": "selected photo(s)",
     "allFolders": "All folders",
+    "photosFound": "photo(s) found",
+    "selected": "selected",
     "editPhoto": "Edit Photo"
   },
   "platforms": {
@@ -131,5 +133,116 @@
     "itemsPerPage": "Items per page",
     "page": "Page",
     "of": "of"
+  },
+  "photoEditor": {
+    "editPhoto": "Edit Photo",
+    "rotation90": "↻ Rotation 90°",
+    "crop": "✂ Crop",
+    "cropMode": "Crop Mode",
+    "apply": "✓ Apply",
+    "cancel": "✕ Cancel",
+    "brightness": "Brightness",
+    "contrast": "Contrast",
+    "size": "Size",
+    "reset": "Reset",
+    "cropArea": "Crop Area",
+    "position": "Position",
+    "dimensions": "Dimensions",
+    "saveChanges": "Save Changes",
+    "saveMessage": "How would you like to save changes?",
+    "createCopy": "Create Copy",
+    "copyMessage": "A copy will be created with name",
+    "originalMessage": "Original photo will be permanently modified"
+  },
+  "photoImport": {
+    "device": "Device",
+    "destination": "Destination",
+    "description": "Description",
+    "importStep": "Import",
+    "selectDestination": "Select destination folder",
+    "automatic": "Automatic",
+    "custom": "Custom",
+    "deleteAfterImport": "Delete after import",
+    "importing": "Importing...",
+    "importSuccess": "Import completed successfully",
+    "importFailed": "Import failed"
+  },
+  "errors": {
+    "loadingCategories": "Error loading categories",
+    "creatingCategory": "Error creating category",
+    "deletingCategory": "Error deleting category",
+    "loadingPhotos": "Error loading photos",
+    "loadingObjects": "Error loading objects",
+    "creatingObject": "Error creating object",
+    "deletingObject": "Error deleting object",
+    "updatingObject": "Error updating object",
+    "updatingAssociations": "Error updating photo associations",
+    "removingPhoto": "Error removing photo association"
+  },
+  "interface": {
+    "expand": "Expand",
+    "collapse": "Collapse",
+    "removePhoto": "Remove this photo",
+    "sellerLibraryName": "Seller Library",
+    "user": "User"
+  },
+  "photoManager": {
+    "loadingPhotos": "Error loading photos",
+    "scanningDirectory": "Select directory to scan",
+    "scanningError": "Error scanning directory",
+    "deletingError": "Error deleting items",
+    "rescanError": "Error rescanning directory",
+    "cannotDetermineDirectory": "Cannot determine directory to rescan"
+  },
+  "placeholders": {
+    "objectName": "Ex: Vintage watch",
+    "objectDescription": "Object description...",
+    "platformName": "ex: eBay France",
+    "platformUrl": "https://www.ebay.fr",
+    "appId": "Your eBay App ID",
+    "certId": "Your eBay Cert ID",
+    "objectYear": "2020",
+    "objectWeight": "0.5",
+    "objectSearch": "Search an object...",
+    "photoSearch": "Search by filename...",
+    "platformSearch": "Search a platform...",
+    "folderName": "Ex: Vacations_2024",
+    "photoDescription": "Example: 'Beautiful Quimper faience', 'Bronze statue'...",
+    "categoryName": "Category name"
+  },
+  "ui": {
+    "associatedPhotos": "Associated photos",
+    "noAssociatedPhotos": "No associated photos",
+    "managePhotos": "Manage photos",
+    "createdAt": "Created on",
+    "modifiedAt": "Modified on",
+    "cropArea": "Crop area",
+    "copyCreated": "A copy will be created with name",
+    "noPhotosInCollection": "No photos in collection",
+    "scanDirectory": "Scan a directory to import photos",
+    "activeToken": "Active access token",
+    "expiresOn": "Expires on",
+    "filterByCategory": "Filter by category:",
+    "showingResults": "Showing {{start}} to {{end}} of {{total}} object(s)",
+    "clearFilters": "Clear filters",
+    "noObjectFound": "No object found",
+    "noObjectCreate": "No object. Create one to start!",
+    "show": "Show",
+    "importSuccessful": "Import successful!",
+    "errorsEncountered": "Errors encountered:",
+    "detectedDevices": "Detected devices",
+    "noDeviceDetected": "No external device detected",
+    "connectDevice": "Connect a USB key, SD card or hard drive",
+    "scanningInProgress": "Scanning in progress...",
+    "noPhotosFound": "No photos found on this device",
+    "delete": "Delete",
+    "confirmDeletion": "Confirm deletion",
+    "newObject": "New object",
+    "deleteObject": "Delete this object?",
+    "newPlatform": "New platform",
+    "deletePlatform": "Delete platform",
+    "notConfigured": "Not configured",
+    "confirmDelete": "Confirm deletion",
+    "rescanDirectory": "Rescan directory"
   }
 }
