--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -84,6 +84,8 @@
     "selectPhotos": "Sélectionner des Photos",
     "selectedPhotos": "photo(s) sélectionnée(s)",
     "allFolders": "Tous les dossiers",
+    "photosFound": "photo(s) trouvée(s)",
+    "selected": "sélectionnée(s)",
     "editPhoto": "Éditer la Photo"
   },
   "platforms": {
@@ -131,5 +133,116 @@
     "itemsPerPage": "Éléments par page",
     "page": "Page",
     "of": "sur"
+  },
+  "photoEditor": {
+    "editPhoto": "Éditer la photo",
+    "rotation90": "↻ Rotation 90°",
+    "crop": "✂ Recadrer",
+    "cropMode": "Mode recadrage",
+    "apply": "✓ Appliquer",
+    "cancel": "✕ Annuler",
+    "brightness": "Luminosité",
+    "contrast": "Contraste",
+    "size": "Taille",
+    "reset": "Réinitialiser",
+    "cropArea": "Zone de recadrage",
+    "position": "Position",
+    "dimensions": "Dimensions",
+    "saveChanges": "Enregistrer les modifications",
+    "saveMessage": "Comment souhaitez-vous enregistrer les modifications ?",
+    "createCopy": "Créer une copie",
+    "copyMessage": "Une copie sera créée avec le nom",
+    "originalMessage": "La photo originale sera modifiée définitivement"
+  },
+  "photoImport": {
+    "device": "Appareil",
+    "destination": "Destination",
+    "description": "Description",
+    "importStep": "Import",
+    "selectDestination": "Sélectionner le dossier de destination",
+    "automatic": "Automatique",
+    "custom": "Personnalisé",
+    "deleteAfterImport": "Supprimer après import",
+    "importing": "Importation...",
+    "importSuccess": "Importation terminée avec succès",
+    "importFailed": "Échec de l'importation"
+  },
+  "errors": {
+    "loadingCategories": "Erreur lors du chargement des catégories",
+    "creatingCategory": "Erreur lors de la création de la catégorie",
+    "deletingCategory": "Erreur lors de la suppression de la catégorie",
+    "loadingPhotos": "Erreur lors du chargement des photos",
+    "loadingObjects": "Erreur lors du chargement des objets",
+    "creatingObject": "Erreur lors de la création de l'objet",
+    "deletingObject": "Erreur lors de la suppression",
+    "updatingObject": "Erreur lors de la mise à jour",
+    "updatingAssociations": "Erreur lors de la mise à jour des associations",
+    "removingPhoto": "Erreur lors de la suppression de l'association"
+  },
+  "interface": {
+    "expand": "Déplier",
+    "collapse": "Replier",
+    "removePhoto": "Retirer cette photo",
+    "sellerLibraryName": "Seller Library",
+    "user": "Utilisateur"
+  },
+  "photoManager": {
+    "loadingPhotos": "Erreur lors du chargement des photos",
+    "scanningDirectory": "Sélectionner un répertoire à scanner",
+    "scanningError": "Erreur lors du scan du répertoire",
+    "deletingError": "Erreur lors de la suppression",
+    "rescanError": "Erreur lors du rescan du répertoire",
+    "cannotDetermineDirectory": "Impossible de déterminer le répertoire à rescanner"
+  },
+  "placeholders": {
+    "objectName": "Ex: Montre vintage",
+    "objectDescription": "Description de l'objet...",
+    "platformName": "ex: eBay France",
+    "platformUrl": "https://www.ebay.fr",
+    "appId": "Votre eBay App ID",
+    "certId": "Votre eBay Cert ID",
+    "objectYear": "2020",
+    "objectWeight": "0.5",
+    "objectSearch": "Rechercher un objet...",
+    "photoSearch": "Rechercher par nom de fichier...",
+    "platformSearch": "Rechercher une plateforme...",
+    "folderName": "Ex: Vacances_2024",
+    "photoDescription": "Exemple : « Superbe faience de quimper », « Statue de bronze »...",
+    "categoryName": "Nom de la catégorie"
+  },
+  "ui": {
+    "associatedPhotos": "Photos associées",
+    "noAssociatedPhotos": "Aucune photo associée",
+    "managePhotos": "Gérer les photos",
+    "createdAt": "Créé le",
+    "modifiedAt": "Modifié le",
+    "cropArea": "Zone de recadrage",
+    "copyCreated": "Une copie sera créée avec le nom",
+    "noPhotosInCollection": "Aucune photo dans la collection",
+    "scanDirectory": "Scannez un répertoire pour importer des photos",
+    "activeToken": "Token d'accès actif",
+    "expiresOn": "Expire le",
+    "filterByCategory": "Filtrer par catégorie :",
+    "showingResults": "Affichage de {{start}} à {{end}} sur {{total}} objet(s)",
+    "clearFilters": "Effacer les filtres",
+    "noObjectFound": "Aucun objet trouvé",
+    "noObjectCreate": "Aucun objet. Créez-en un pour commencer !",
+    "show": "Afficher",
+    "importSuccessful": "Import réussi !",
+    "errorsEncountered": "Erreurs rencontrées :",
+    "detectedDevices": "Appareils détectés",
+    "noDeviceDetected": "Aucun appareil externe détecté",
+    "connectDevice": "Connectez une clé USB, carte SD ou disque dur",
+    "scanningInProgress": "Scan en cours...",
+    "noPhotosFound": "Aucune photo trouvée sur cet appareil",
+    "delete": "Supprimer",
+    "confirmDeletion": "Confirmer la suppression",
+    "newObject": "Nouvel objet",
+    "deleteObject": "Supprimer cet objet ?",
+    "newPlatform": "Nouvelle plateforme",
+    "deletePlatform": "Supprimer la plateforme",
+    "notConfigured": "Non configuré",
+    "confirmDelete": "Confirmer la suppression",
+    "rescanDirectory": "Rescanner le répertoire"
   }
 }
