--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,6 +13,7 @@
     "delete": "Delete",
     "edit": "Edit",
     "create": "Create",
+    "add": "Add",
     "close": "Close",
     "confirm": "Confirm",
     "yes": "Yes",
@@ -48,7 +49,7 @@
     "newObject": "New Object",
     "noObjects": "No objects yet",
     "startAdding": "Start adding objects to your collection",
-    "deleteConfirm": "Are you sure you want to delete this object?",
+    "deleteConfirm": "Are you sure you want to delete this object",
     "deleteMessage": "This action is irreversible. The object will be permanently deleted.",
     "objectDetails": "Object Details",
     "addPhoto": "Add Photo",
@@ -61,7 +62,7 @@
     "newCategory": "New Category",
     "noCategories": "No categories yet",
     "startAdding": "Start adding categories to organize your objects",
-    "deleteConfirm": "Are you sure you want to delete this category?",
+    "deleteConfirm": "Are you sure you want to delete this category",
     "deleteMessage": "This action is irreversible. Objects in this category will not be deleted.",
     "selectCategory": "Select a category"
   },
@@ -84,7 +85,6 @@
     "selectPhotos": "Select Photos",
     "selectedPhotos": "selected photo(s)",
     "allFolders": "All folders",
-    "photosFound": "photo(s) found",
     "selected": "selected",
     "editPhoto": "Edit Photo"
   },
@@ -110,7 +110,7 @@
     "notConfigured": "Not configured",
     "configured": "Configured",
     "connected": "Connected",
-    "deleteConfirm": "Are you sure you want to delete this platform?",
+    "deleteConfirm": "Are you sure you want to delete this platform",
     "deleteMessage": "This action is irreversible."
   },
   "update": {
@@ -119,7 +119,7 @@
     "downloading": "Downloading and installing...",
     "willRestart": "The application will restart automatically",
     "upToDate": "Your version is up to date",
-    "updatePrompt": "Do you want to update from version {{current}} to version {{new}}?",
+    "updatePrompt": "Do you want to update from version {{current}} to version {{new}}",
     "changes": "Changes:",
     "clickToCheck": "Click to check for updates"
   },
@@ -149,7 +149,7 @@
     "position": "Position",
     "dimensions": "Dimensions",
     "saveChanges": "Save Changes",
-    "saveMessage": "How would you like to save changes?",
+    "saveMessage": "How would you like to save changes",
     "createCopy": "Create Copy",
     "copyMessage": "A copy will be created with name",
     "originalMessage": "Original photo will be permanently modified"
@@ -238,7 +238,7 @@
     "delete": "Delete",
     "confirmDeletion": "Confirm deletion",
     "newObject": "New object",
-    "deleteObject": "Delete this object?",
+    "deleteObject": "Delete this object",
     "newPlatform": "New platform",
     "deletePlatform": "Delete platform",
     "notConfigured": "Not configured",
