--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -13,6 +13,7 @@
     "delete": "Supprimer",
     "edit": "Modifier",
     "create": "Créer",
+    "add": "Ajouter",
     "close": "Fermer",
     "confirm": "Confirmer",
     "yes": "Oui",
@@ -48,7 +49,7 @@
     "newObject": "Nouvel Objet",
     "noObjects": "Aucun objet pour le moment",
     "startAdding": "Commencez à ajouter des objets à votre collection",
-    "deleteConfirm": "Êtes-vous sûr de vouloir supprimer cet objet ?",
+    "deleteConfirm": "Êtes-vous sûr de vouloir supprimer cet objet",
     "deleteMessage": "Cette action est irréversible. L'objet sera définitivement supprimé.",
     "objectDetails": "Détails de l'objet",
     "addPhoto": "Ajouter une photo",
@@ -61,7 +62,7 @@
     "newCategory": "Nouvelle Catégorie",
     "noCategories": "Aucune catégorie pour le moment",
     "startAdding": "Commencez à ajouter des catégories pour organiser vos objets",
-    "deleteConfirm": "Êtes-vous sûr de vouloir supprimer cette catégorie ?",
+    "deleteConfirm": "Êtes-vous sûr de vouloir supprimer cette catégorie",
     "deleteMessage": "Cette action est irréversible. Les objets de cette catégorie ne seront pas supprimés.",
     "selectCategory": "Sélectionnez une catégorie"
   },
@@ -84,7 +85,6 @@
     "selectPhotos": "Sélectionner des Photos",
     "selectedPhotos": "photo(s) sélectionnée(s)",
     "allFolders": "Tous les dossiers",
-    "photosFound": "photo(s) trouvée(s)",
     "selected": "sélectionnée(s)",
     "editPhoto": "Éditer la Photo"
   },
@@ -110,7 +110,7 @@
     "notConfigured": "Non configuré",
     "configured": "Configuré",
     "connected": "Connecté",
-    "deleteConfirm": "Êtes-vous sûr de vouloir supprimer cette plateforme ?",
+    "deleteConfirm": "Êtes-vous sûr de vouloir supprimer cette plateforme",
     "deleteMessage": "Cette action est irréversible."
   },
   "update": {
@@ -119,7 +119,7 @@
     "downloading": "Téléchargement et installation en cours...",
     "willRestart": "L'application va redémarrer automatiquement",
     "upToDate": "Votre version est à jour",
-    "updatePrompt": "Voulez-vous mettre à jour de la version {{current}} vers la version {{new}} ?",
+    "updatePrompt": "Voulez-vous mettre à jour de la version {{current}} vers la version {{new}}",
     "changes": "Changements :",
     "clickToCheck": "Cliquer pour vérifier les mises à jour"
   },
@@ -149,7 +149,7 @@
     "position": "Position",
     "dimensions": "Dimensions",
     "saveChanges": "Enregistrer les modifications",
-    "saveMessage": "Comment souhaitez-vous enregistrer les modifications ?",
+    "saveMessage": "Comment souhaitez-vous enregistrer les modifications",
     "createCopy": "Créer une copie",
     "copyMessage": "Une copie sera créée avec le nom",
     "originalMessage": "La photo originale sera modifiée définitivement"
@@ -238,7 +238,7 @@
     "delete": "Supprimer",
     "confirmDeletion": "Confirmer la suppression",
     "newObject": "Nouvel objet",
-    "deleteObject": "Supprimer cet objet ?",
+    "deleteObject": "Supprimer cet objet",
     "newPlatform": "Nouvelle plateforme",
     "deletePlatform": "Supprimer la plateforme",
     "notConfigured": "Non configuré",
