--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -14,6 +14,7 @@
     "edit": "Edit",
     "create": "Create",
     "add": "Add",
+    "refresh": "Refresh",
     "close": "Close",
     "confirm": "Confirm",
     "yes": "Yes",
@@ -165,7 +166,13 @@
     "deleteAfterImport": "Delete after import",
     "importing": "Importing...",
     "importSuccess": "Import completed successfully",
-    "importFailed": "Import failed"
+    "importFailed": "Import failed",
+    "deviceDescription": "Select an external device (USB key, SD card, hard drive) containing photos to import",
+    "successImport": "Import successful!",
+    "photosImported": "photos imported successfully",
+    "photosDetected": "photo(s) detected",
+    "errorsEncountered": "Errors encountered:",
+    "moreErrors": "... and {{count}} more error(s)"
   },
   "errors": {
     "loadingCategories": "Error loading categories",
@@ -173,6 +180,8 @@
     "deletingCategory": "Error deleting category",
     "loadingPhotos": "Error loading photos",
     "loadingObjects": "Error loading objects",
+    "loadingPlatforms": "Error loading platforms",
+    "creatingPlatform": "Error creating platform",
     "creatingObject": "Error creating object",
     "deletingObject": "Error deleting object",
     "updatingObject": "Error updating object",
@@ -199,6 +208,7 @@
     "objectDescription": "Object description...",
     "platformName": "ex: eBay France",
     "platformUrl": "https://www.ebay.fr",
+    "apiConfig": "eBay API Configuration",
     "appId": "Your eBay App ID",
     "certId": "Your eBay Cert ID",
     "objectYear": "2020",
@@ -227,6 +237,8 @@
     "clearFilters": "Clear filters",
     "noObjectFound": "No object found",
     "noObjectCreate": "No object. Create one to start!",
+    "noPlatformFound": "No platform found",
+    "noPlatformCreate": "No platform. Create one to start!",
     "show": "Show",
     "importSuccessful": "Import successful!",
     "errorsEncountered": "Errors encountered:",
