--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -14,6 +14,7 @@
     "edit": "Modifier",
     "create": "Créer",
     "add": "Ajouter",
+    "refresh": "Actualiser",
     "close": "Fermer",
     "confirm": "Confirmer",
     "yes": "Oui",
@@ -165,7 +166,13 @@
     "deleteAfterImport": "Supprimer après import",
     "importing": "Importation...",
     "importSuccess": "Importation terminée avec succès",
-    "importFailed": "Échec de l'importation"
+    "importFailed": "Échec de l'importation",
+    "deviceDescription": "Sélectionnez un périphérique externe (clé USB, carte SD, disque dur) contenant les photos à importer",
+    "successImport": "Import réussi !",
+    "photosImported": "photos importées avec succès",
+    "photosDetected": "photo(s) détectée(s)",
+    "errorsEncountered": "Erreurs rencontrées :",
+    "moreErrors": "... et {{count}} autre(s) erreur(s)"
   },
   "errors": {
     "loadingCategories": "Erreur lors du chargement des catégories",
@@ -173,6 +180,8 @@
     "deletingCategory": "Erreur lors de la suppression de la catégorie",
     "loadingPhotos": "Erreur lors du chargement des photos",
     "loadingObjects": "Erreur lors du chargement des objets",
+    "loadingPlatforms": "Erreur lors du chargement des plateformes",
+    "creatingPlatform": "Erreur lors de la création de la plateforme",
     "creatingObject": "Erreur lors de la création de l'objet",
     "deletingObject": "Erreur lors de la suppression",
     "updatingObject": "Erreur lors de la mise à jour",
@@ -199,6 +208,7 @@
     "objectDescription": "Description de l'objet...",
     "platformName": "ex: eBay France",
     "platformUrl": "https://www.ebay.fr",
+    "apiConfig": "Configuration API eBay",
     "appId": "Votre eBay App ID",
     "certId": "Votre eBay Cert ID",
     "objectYear": "2020",
@@ -227,6 +237,8 @@
     "clearFilters": "Effacer les filtres",
     "noObjectFound": "Aucun objet trouvé",
     "noObjectCreate": "Aucun objet. Créez-en un pour commencer !",
+    "noPlatformFound": "Aucune plateforme trouvée",
+    "noPlatformCreate": "Aucune plateforme. Créez-en une pour commencer !",
     "show": "Afficher",
     "importSuccessful": "Import réussi !",
     "errorsEncountered": "Erreurs rencontrées :",
