fix plaforms translations

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -102,17 +102,33 @@
     "startAdding": "Start adding platforms to sell your objects",
     "platformDetails": "Platform Details",
     "baseUrl": "Base URL",
+    "platformName": "Platform name",
     "appId": "App ID (Client ID)",
     "certId": "Cert ID (Client Secret)",
     "environment": "Environment",
     "production": "Production",
     "sandbox": "Sandbox",
+    "apiConfig": "eBay API Configuration",
     "status": "Status",
     "notConfigured": "Not configured",
     "configured": "Configured",
     "connected": "Connected",
     "deleteConfirm": "Are you sure you want to delete this platform",
-    "deleteMessage": "This action is irreversible."
+    "deleteMessage": "This action is irreversible.",
+    "creating": "Creating...",
+    "createPlatform": "Create Platform",
+    "devInfo": "These credentials are available in your eBay developer account",
+    "connectionStatus": "Connection Status",
+    "connectedAuthenticated": "Connected and authenticated",
+    "configuredAuthRequired": "Configured (authentication required)",
+    "sandboxMode": "Sandbox Mode",
+    "baseUrl": "Base URL",
+    "apiConfiguration": "API Configuration",
+    "appId": "App ID:",
+    "certId": "Cert ID:",
+    "authentication": "Authentication",
+    "activeToken": "Active access token",
+    "updatingPlatform": "Error updating platform"
   },
   "update": {
     "title": "Update Available",
@@ -206,9 +222,8 @@
   "placeholders": {
     "objectName": "Ex: Vintage watch",
     "objectDescription": "Object description...",
-    "platformName": "ex: eBay France",
     "platformUrl": "https://www.ebay.fr",
-    "apiConfig": "eBay API Configuration",
+    "platformName": "ex: eBay France",
     "appId": "Your eBay App ID",
     "certId": "Your eBay Cert ID",
     "objectYear": "2020",
