--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -102,17 +102,33 @@
     "startAdding": "Commencez à ajouter des plateformes pour vendre vos objets",
     "platformDetails": "Détails de la plateforme",
     "baseUrl": "URL de base",
+    "platformName": "Nom de la plateforme",
     "appId": "App ID (Client ID)",
     "certId": "Cert ID (Client Secret)",
     "environment": "Environnement",
     "production": "Production",
     "sandbox": "Sandbox",
+    "apiConfig": "Configuration API eBay",
     "status": "Statut",
     "notConfigured": "Non configuré",
     "configured": "Configuré",
     "connected": "Connecté",
     "deleteConfirm": "Êtes-vous sûr de vouloir supprimer cette plateforme",
-    "deleteMessage": "Cette action est irréversible."
+    "deleteMessage": "Cette action est irréversible.",
+    "creating": "Création...",
+    "createPlatform": "Créer la plateforme",
+    "devInfo": "Ces informations sont disponibles dans votre compte développeur eBay",
+    "connectionStatus": "Statut de connexion",
+    "connectedAuthenticated": "Connecté et authentifié",
+    "configuredAuthRequired": "Configuré (authentification requise)",
+    "sandboxMode": "Mode Sandbox",
+    "baseUrl": "URL de base",
+    "apiConfiguration": "Configuration API",
+    "appId": "App ID:",
+    "certId": "Cert ID:",
+    "authentication": "Authentification",
+    "activeToken": "Token d'accès actif",
+    "updatingPlatform": "Erreur lors de la mise à jour"
   },
   "update": {
     "title": "Mise à jour disponible",
@@ -206,9 +222,8 @@
   "placeholders": {
     "objectName": "Ex: Montre vintage",
     "objectDescription": "Description de l'objet...",
-    "platformName": "ex: eBay France",
     "platformUrl": "https://www.ebay.fr",
-    "apiConfig": "Configuration API eBay",
+    "platformName": "ex: eBay France",
     "appId": "Votre eBay App ID",
     "certId": "Votre eBay Cert ID",
     "objectYear": "2020",
